package main

import (
	"context"
	"fmt"
	"log"
	"net" // ğŸ‘ˆ æ–°å¢ï¼šç½‘ç»œåŒ…
	"os"
	"os/exec"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	pb "github.com/stywzn/Go-Cloud-Compute/api/proto"
)

// RunLocalCommand æ‰§è¡Œæœ¬åœ° Shell å‘½ä»¤ (æ²¡å˜)
func RunLocalCommand(cmdStr string) (string, bool) {
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	cmd := exec.CommandContext(ctx, "sh", "-c", cmdStr)
	output, err := cmd.CombinedOutput()

	if err != nil {
		if ctx.Err() == context.DeadlineExceeded {
			return fmt.Sprintf("âŒ ä»»åŠ¡è¶…æ—¶! (10s limit)\nè¾“å‡º: %s", string(output)), false
		}
		return fmt.Sprintf("âŒ æ‰§è¡Œå‡ºé”™: %v\nè¾“å‡º: %s", err, string(output)), false
	}
	return string(output), true
}

func main() {
	// 1. è¯»å–ç¯å¢ƒå˜é‡
	serverAddr := os.Getenv("SERVER_ADDR")
	if serverAddr == "" {
		serverAddr = "127.0.0.1:9090"
	}

	log.Printf("ğŸ”Œ å‡†å¤‡è¿æ¥ Server åœ°å€: %s", serverAddr)

	// ğŸ‘‡ğŸ‘‡ğŸ‘‡ æ ¸å¿ƒä¿®æ”¹å¼€å§‹ ğŸ‘‡ğŸ‘‡ğŸ‘‡
	// è‡ªå®šä¹‰æ‹¨å·å™¨ï¼šå¼ºåˆ¶ä½¿ç”¨ "tcp4" (IPv4)ï¼Œå½»åº•å±è”½ IPv6 é—®é¢˜
	customDialer := func(ctx context.Context, addr string) (net.Conn, error) {
		d := net.Dialer{}
		// å…³é”®ç‚¹ï¼šè¿™é‡Œå†™çš„æ˜¯ "tcp4"ï¼Œä¸æ˜¯ "tcp"
		return d.DialContext(ctx, "tcp4", addr)
	}

	// è¿æ¥é€‰é¡¹
	opts := []grpc.DialOption{
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithContextDialer(customDialer), // ğŸ‘ˆ æ³¨å…¥æˆ‘ä»¬çš„å¼ºåˆ¶ IPv4 æ‹¨å·å™¨
	}

	// å»ºç«‹è¿æ¥
	conn, err := grpc.NewClient(serverAddr, opts...)
	// ğŸ‘†ğŸ‘†ğŸ‘† æ ¸å¿ƒä¿®æ”¹ç»“æŸ ğŸ‘†ğŸ‘†ğŸ‘†

	if err != nil {
		log.Fatalf("æ— æ³•è¿æ¥æœåŠ¡å™¨: %v", err)
	}
	defer conn.Close()

	client := pb.NewSentinelServiceClient(conn)

	// ... (åé¢çš„ä»£ç å®Œå…¨æ²¡å˜) ...
	// æ³¨å†Œ Agent
	hostname, _ := os.Hostname()
	ip := "Unknown"

	// å¾ªç¯å‘å¿ƒè·³
	for {
		// 1. å‘èµ·æ³¨å†Œ
		log.Printf("Agent [%s] æ­£åœ¨å‘æ§åˆ¶é¢æ³¨å†Œ...", hostname)
		regResp, err := client.Register(context.Background(), &pb.RegisterReq{
			Hostname: hostname,
			Ip:       ip,
		})

		if err != nil {
			log.Printf("âš ï¸ æ³¨å†Œå¤±è´¥: %v", err)
			time.Sleep(2 * time.Second) // å¤±è´¥äº†ç­‰ 2 ç§’é‡è¯•
			continue
		}

		log.Printf("âœ… æ³¨å†ŒæˆåŠŸ! ID: %s", regResp.AgentId)

		// 2. å»ºç«‹å¿ƒè·³æµ
		stream, err := client.Heartbeat(context.Background())
		if err != nil {
			log.Printf("âŒ å»ºç«‹å¿ƒè·³æµå¤±è´¥: %v", err)
			continue
		}

		// 3. å¼€å§‹æ”¶å‘å¿ƒè·³
		waitc := make(chan struct{})

		// å‘é€åç¨‹
		go func() {
			for {
				err := stream.Send(&pb.HeartbeatReq{AgentId: regResp.AgentId})
				if err != nil {
					log.Printf("âŒ å¿ƒè·³å‘é€å¤±è´¥: %v", err)
					close(waitc)
					return
				}
				time.Sleep(5 * time.Second)
			}
		}()

		// æ¥æ”¶åç¨‹ (æ¥æ”¶ä»»åŠ¡)
		go func() {
			for {
				resp, err := stream.Recv()
				if err != nil {
					log.Printf("âŒ å¿ƒè·³æ¥æ”¶æ–­å¼€: %v", err)
					close(waitc)
					return
				}

				if resp.Job != nil {
					// âš¡ï¸ æ”¶åˆ°ä»»åŠ¡ï¼Œå¼€å¯åç¨‹å»å¹²æ´»
					go func(j *pb.Job) {
						log.Printf("âš™ï¸ [æ‰§è¡Œä¸­] æ­£åœ¨æ‰§è¡Œä»»åŠ¡: %s", j.Payload)

						output, success := RunLocalCommand(j.Payload)
						log.Printf("ğŸ“„ [æ‰§è¡Œç»“æœ] \n%s", output)

						reportCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
						defer cancel()

						status := "Success"
						if !success {
							status = "Failed"
						}

						_, err := client.ReportJobStatus(reportCtx, &pb.ReportJobReq{
							AgentId: regResp.AgentId,
							JobId:   j.JobId,
							Status:  status,
							Result:  output,
						})

						if err != nil {
							log.Printf("âŒ æ±‡æŠ¥å¤±è´¥: %v", err)
						} else {
							log.Printf("âœ… [æ±‡æŠ¥æˆåŠŸ] ç»“æœå·²ä¸Šä¼ ")
						}
					}(resp.Job)
				}
			}
		}()

		<-waitc
		log.Println("ğŸ”Œ è¿æ¥æ–­å¼€ï¼Œ3ç§’åé‡è¿...")
		time.Sleep(3 * time.Second)
	}
}
